k8s/hellod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellod-deployment
  labels:
    app: hellod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellod
  template:
    metadata:
      labels:
        app: hellod
    spec:
      containers:
        - name: hellod
          image: sdukshis/hellod
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hellod-service
  labels:
    app: hellod
spec:
  selector:
    app: hellod
  ports:
    - name: hellod
      protocol: TCP
      port: 8080
