k8s/ingress-hello.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "hello.k8s.filonovpv.name"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hellod-service
            port:
              number: 8080
