k8s/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: "kibana.k8s.filonovpv.name"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
